Spacing issues on various breakpoints resolved

--- a/assets/sass/build.scss
+++ b/assets/sass/build.scss
@@ -11,14 +11,14 @@
 
 
 .listing-list--highlighted {
-  margin: 0;
+  margin: 0 -20px;
   white-space: nowrap;
 
   .listing-list__item {
     list-style-type: none;
     padding: 2px;
-    width: 100%;
-    margin: 0 0 10px;
+    width: calc(100% - 40px);
+    margin: 0 20px 10px;
     border: 1px solid #cccccc;
     display: inline-block;
     vertical-align: top;
@@ -41,11 +41,9 @@
   .listing-list--highlighted {
     //display: flex;
     //flex-wrap: nowrap;
-    margin: 0 -20px;
+
     .listing-list__item {
       width: calc(50% - 40px);
-      margin-left: 20px;
-      margin-right: 20px;
 
     }
     //.listing-list__item:nth-of-type(odd) {
@@ -64,20 +62,6 @@
     .listing-list__item {
       width: calc(33.333% - 40px);
     }
-    //.listing-list__item:nth-of-type(odd) {
-    //  margin-left: 1%;
-    //  margin-right: 1%;
-    //}
-    //.listing-list__item:nth-of-type(even) {
-    //  margin-left: 1%;
-    //  margin-right: 1%;
-    //}
-    //.listing-list__item:nth-of-type(3n+1) {
-    //  margin-left: 0;
-    //}
-    //.listing-list__item:nth-of-type(3n) {
-    //  margin-right: 0;
-    //}
   }
 }
 
@@ -87,7 +71,6 @@
 .js {
   .listing-list--highlighted {
     transition: transform .2s;
-    //border: 4px solid #cc0000;
   }
 }
 
@@ -95,7 +78,6 @@
   .listing-list-container--highlighted {
     border-top: 4px solid yellow;
     overflow: hidden;
-    padding: 0 1px;
     position: relative;
 
     @media only screen and (min-width: 640px) {
